--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "background": {
+      "scripts": ["js/jquery-3.2.1.min.js"]  
+  },
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/"
